tests/fixtures/errors/postprocess/postprocess/invalid-stdout-json.js
module.exports = require("./hack")(async () => ({
  exitCode: 0,
  stdout: '{ "exitCode": 0, }'
}));
